--- a/landingPage/styles.css
+++ b/landingPage/styles.css
@@ -1,4 +1,61 @@
+:root {
+    --colorDeFondo: #eafdf5;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
+    padding: 0;
+}
+
+html {
+    font-size: 62.5%;
+}
+
+#header {
+    display: grid;
+    grid-template-columns: 1fr 0.5fr 2fr;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 30rem;
+}
+
+body {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color: var(--colorDeFondo);
+}
+
+#nav-bar {
+    grid-column: 3/3;
+}
+
+#nav-bar ul {
+    height: 20rem;
+    text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 2.5rem;
+}
+
+#logo {
+    grid-column: 1/2;
+    min-width: 300px;
+    width: 100%;
+    height: 20rem;
+}
+
+#header-img {
+    width: 100%;
+    height: 100%;
+}
+
+li {
+    list-style: none;
+}
+
+#contenedor {
+    position: relative;
 }
