--- a/landingPage/styles.css
+++ b/landingPage/styles.css
@@ -6,19 +6,8 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
-
-html {
-    font-size: 62.5%;
-}
-
-#header {
-    display: grid;
-    grid-template-columns: 1fr 0.5fr 2fr;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 30rem;
+    list-style: none;
+    text-decoration: none;
 }
 
 body {
@@ -26,36 +15,65 @@ body {
     background-color: var(--colorDeFondo);
 }
 
-#nav-bar {
-    grid-column: 3/3;
+html {
+    font-size: 62.5%;
 }
 
-#nav-bar ul {
-    height: 20rem;
-    text-decoration: none;
+#header {
     display: flex;
-    flex-direction: row;
+    width: 100%;
+    height: 12rem;
+    position: fixed;
+    background-color: var(--colorDeFondo);
     justify-content: space-evenly;
     align-items: center;
-    font-size: 2.5rem;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    padding: 0;
+    margin: 0;
+}
+
+#nav-bar {
+    width: 80%;
+    height: 100%;
+    position: absolute;
+    left: 20rem;
+    right: 0;
+}
+
+nav ul {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#nav-bar>ul li {
+    justify-content: space-between;
+    font-size: 2rem;
+    
+}
+
+img {
+
 }
 
 #logo {
-    grid-column: 1/2;
-    min-width: 300px;
-    width: 100%;
-    height: 20rem;
-}
-
-#header-img {
-    width: 100%;
+    width: 20%;
     height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    overflow-y: auto;
 }
 
-li {
-    list-style: none;
-}
-
-#contenedor {
-    position: relative;
+#envoltura {
+    position: absolute;
+    top: 15rem;
+    bottom: 0;
+    margin: 2rem auto;
+    padding-top: 1rem 0;
 }
