--- a/landingPage/styles.css
+++ b/landingPage/styles.css
@@ -11,18 +11,20 @@
 }
 
 body {
+    width: 100%;
+    height: 100%;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    background-color: var(--colorDeFondo);
+    background-color: whitesmoke;
 }
 
 html {
     font-size: 62.5%;
 }
-
+/*Estilos para la barra de navegacion*/
 #header {
     display: flex;
     width: 100%;
-    height: 12rem;
+    height: 10%;
     position: fixed;
     background-color: var(--colorDeFondo);
     justify-content: space-evenly;
@@ -35,10 +37,9 @@ html {
 }
 
 #nav-bar {
-    width: 80%;
+    width: 50%;
     height: 100%;
     position: absolute;
-    left: 20rem;
     right: 0;
 }
 
@@ -46,34 +47,59 @@ nav ul {
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-end;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 #nav-bar>ul li {
-    justify-content: space-between;
+    padding: 0 2%;
     font-size: 2rem;
     
 }
 
-img {
-
+#logo>#header-img {
+    min-width: 30%;
+    max-width: 50%;
+    max-height: 90%;
+    padding: 5px 0;
+    margin: 2px auto;
+    vertical-align: middle;
 }
 
 #logo {
-    width: 20%;
+    width: 50%;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    object-fit: cover;
-    overflow-y: auto;
+    overflow: hidden; 
+    margin-left: 1rem;  
 }
 
 #envoltura {
     position: absolute;
-    top: 15rem;
+    top: 11%;
     bottom: 0;
-    margin: 2rem auto;
-    padding-top: 1rem 0;
+    margin: 1rem auto;
+    text-align: center;
+}
+
+/*Estilos de mi formulario*/
+#hero
+
+#email {
+    min-width: 300px;
+    width: 62rem;
+    height: 1.5rem;
+
+}
+
+.btn {
+    display:block;
+    width:20%;
+    margin: 1em auto;
+    font-size:1.1rem;
+    height: 2em;
+    background-color: #d7d7e7;
 }
