--- a/landingPage/styles.css
+++ b/landingPage/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 :root {
     --colorDeFondo: #eafdf5;
 }
@@ -10,15 +12,16 @@
     text-decoration: none;
 }
 
+html {
+    font-size: 62.5%;
+}
+
 body {
     width: 100%;
     height: 100%;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Press Start 2P', cursive;
     background-color: whitesmoke;
-}
-
-html {
-    font-size: 62.5%;
+    font-size: 1rem;
 }
 /*Estilos para la barra de navegacion*/
 #header {
@@ -74,7 +77,7 @@ nav ul {
     top: 0;
     left: 0;
     overflow: hidden; 
-    margin-left: 1rem;  
+    margin-left: 8rem;  
 }
 
 #envoltura {
@@ -86,13 +89,21 @@ nav ul {
 }
 
 /*Estilos de mi formulario*/
-#hero
+#hero>h2 {
+    font-size: 3rem;
+}
+
+#hero>h2::after {
+    content: " ";
+    display: block;
+    height: 20px;
+}
 
 #email {
-    min-width: 300px;
-    width: 62rem;
-    height: 1.5rem;
-
+    width: 30rem;
+    height: 3rem;
+    font-size: 2rem;
+    border-radius: 3px;
 }
 
 .btn {
@@ -100,6 +111,11 @@ nav ul {
     width:20%;
     margin: 1em auto;
     font-size:1.1rem;
-    height: 2em;
-    background-color: #d7d7e7;
+    height: 3em;
+    background: linear-gradient(
+        to right, 
+        #73e2b4, 
+        #eafdf5);
+    border-radius: 5px;
+    opacity: 0.5;
 }
