--- a/landingPage/styles.css
+++ b/landingPage/styles.css
@@ -2,6 +2,10 @@
 
 :root {
     --colorDeFondo: #eafdf5;
+    --colorDeFondo2:linear-gradient(
+        to right, 
+        #73e2b4, 
+        #eafdf5);
     --colorIcono1: #e91c1c;
 }
 
@@ -21,7 +25,7 @@ body {
     width: 100%;
     height: 100%;
     font-family: 'Press Start 2P', cursive;
-    background-color: whitesmoke;
+    background-color: var(--colorDeFondo);
     font-size: 1rem;
 }
 /*Estilos para la barra de navegacion*/
@@ -30,7 +34,7 @@ body {
     width: 100%;
     height: 10%;
     position: fixed;
-    background-color: var(--colorDeFondo);
+    background: var(--colorDeFondo2);
     justify-content: space-evenly;
     align-items: center;
     top: 0;
@@ -78,7 +82,7 @@ nav ul {
     top: 0;
     left: 0;
     overflow: hidden; 
-    margin-left: 8rem;  
+    margin-left: 5rem;  
 }
 
 #envoltura {
@@ -115,11 +119,11 @@ nav ul {
     font-size:1.1rem;
     height: 3em;
     background: linear-gradient(
-        to right, 
+        to bottom, 
         #73e2b4, 
         #eafdf5);
     border-radius: 5px;
-    opacity: 0.5;
+    opacity: 0.9;
 }
 
 #hero::after {
@@ -197,9 +201,61 @@ nav ul {
     border: 2px solid black;
     border-radius: 4px;
     line-height: 1.5;
-    width: 40%;
+    width: 35%;
     height: 100%;
     margin: 0 1rem;
-    padding: 2rem;
+    padding: 0;
+    gap: 5px;
 }
 
+.servicio {
+    display: flex;
+    background: var(--colorDeFondo2);
+    width: 100%;
+    height: 100%;
+    padding:0;
+    font-size: 1.2rem;
+    align-items: end;
+    justify-content: center;
+}
+
+.servicio>p {
+    height: 100%;
+    width: 100%;
+    padding: 1.5px 0;
+    vertical-align: center;
+    place-self: center end;
+}
+
+.producto>ol {
+    width: 88%;
+    height: 100%;
+    text-align: justify;
+    place-self: center start;
+    margin: 0 auto;
+}
+
+.producto>ol li::after {
+    display: block;
+    content: " ";
+    height: 1rem;
+}
+
+.producto>h2 {
+    place-self: center;
+}
+
+.producto>.btn {
+    place-self: center;
+    width: 30%;
+    height: 80%;
+}
+
+footer {
+    display: grid;
+    grid-template-rows: 1fr;
+    place-self:center right ;
+    width: 100%;
+    text-align: justify;
+    background: var(--colorDeFondo2);
+}
