--- a/landingPage/styles.css
+++ b/landingPage/styles.css
@@ -62,7 +62,7 @@ nav ul {
 
 #nav-bar>ul li {
     padding: 0 2%;
-    font-size: 2rem;
+    font-size: 1.5rem;
     
 }
 
@@ -253,9 +253,82 @@ nav ul {
 
 footer {
     display: grid;
-    grid-template-rows: 1fr;
-    place-self:center right ;
+    grid-template-columns: 1fr;
+    grid-template-rows: 2.5rem 1.5rem;
+    place-items: center;
     width: 100%;
-    text-align: justify;
     background: var(--colorDeFondo2);
+    gap: 1rem;
+}
+
+footer>ul li{
+    height: 100%;
+    padding: 2px;
+    align-content: center;
+}
+
+footer>ul, footer>span {
+    place-self: flex-end;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 1rem;
+    margin: 0.5rem;
+}
+
+@media only screen and (max-width:1010px) {
+    #header {
+        display: flex;
+        width: 100%;
+        height: 10%;
+        position: fixed;
+        background: var(--colorDeFondo2);
+        justify-content: space-evenly;
+        align-items: center;
+        top: 0;
+        left: 0;
+        z-index: 999;
+        padding: 0;
+        margin: 0;
+    }
+    
+    #nav-bar {
+        width: 50%;
+        height: 100%;
+        position: absolute;
+        bottom: 0;
+    }
+    
+    nav ul {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    
+    #nav-bar>ul li {
+        padding: 0 2%;
+        font-size: 1rem;
+        
+    }
+    
+    #logo>#header-img {
+        min-width: 30%;
+        max-width: 50%;
+        max-height: 90%;
+        padding: 5px 0;
+        margin: 2px auto;
+        vertical-align: middle;
+    }
+    
+    #logo {
+        width: 50%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        overflow: hidden;   
+    }
+    
 }
