--- a/landingPage/styles.css
+++ b/landingPage/styles.css
@@ -277,58 +277,98 @@ footer>ul, footer>span {
 }
 
 @media only screen and (max-width:1010px) {
+   html  {
+        font-size: 45%;
+    }   
+}
+
+@media only screen and (max-width:730px) {
+
+    html  {
+        font-size: 50%;
+    }
     #header {
         display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
         width: 100%;
-        height: 10%;
+        height: 25%;
         position: fixed;
         background: var(--colorDeFondo2);
-        justify-content: space-evenly;
-        align-items: center;
         top: 0;
-        left: 0;
         z-index: 999;
-        padding: 0;
-        margin: 0;
     }
-    
+
     #nav-bar {
-        width: 50%;
-        height: 100%;
+        height: 49%;
         position: absolute;
         bottom: 0;
+        right: unset;
+        margin: 0 auto;
     }
     
     nav ul {
         width: 100%;
-        height: 100%;
         display: flex;
-        justify-content: center;
+        flex-direction: column;
+        justify-content: space-around;
         align-items: center;
-        flex-wrap: wrap;
+        position: absolute;
+        bottom: 0;
+        margin-bottom: 5px;
     }
-    
-    #nav-bar>ul li {
-        padding: 0 2%;
-        font-size: 1rem;
-        
-    }
-    
+
     #logo>#header-img {
-        min-width: 30%;
-        max-width: 50%;
-        max-height: 90%;
-        padding: 5px 0;
-        margin: 2px auto;
-        vertical-align: middle;
+        max-width: unset;
+        width: 100%;
+        height: 100%;
+        margin: unset;     
     }
     
     #logo {
-        width: 50%;
-        height: 100%;
+        margin: unset;
+        height: 49%;
         position: absolute;
         top: 0;
-        overflow: hidden;   
+        left: unset;
+        overflow: hidden; 
+        justify-content: center;
     }
-    
+
+    #envoltura {
+        position: absolute;
+        top: 31%;
+        bottom: 0;
+        margin: 1rem auto;
+        text-align: center;
+    }
+
+    #precios {
+        display: flex;
+        width: 60%;
+        height: auto;
+        margin: 1.5rem auto;
+        flex-direction: column;
+        align-items: start;
+        justify-content: space-around;
+    }
+
+    .producto {
+        width: 100%;
+        height: 35%;
+        gap: 5px;
+        margin-top: 2rem;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    #envoltura {
+        top: 40%;
+    }
+
+    #función>iframe {
+        width: 80%;
+        height: auto;
+    }
 }
